# HumanAgencyBench_private

./: .gitignore  README.md  analyze_encourage_learning_disagreement.py  assistant.py  basic_pipe_script.py  build_agg_results.ipynb  calculate_krippendorff_three_evaluators.py  dataset_generation.ipynb  dataset_generation.py  demo.ipynb  diversity.py  diversity_visualisation.ipynb  eval_phase.py  evaluate_prompt_quality.ipynb  evaluate_prompt_quality.py  evaluation_experimentation.ipynb  evaluation_results_claude3-5_responses.json  evaluation_results_gpt3.5.json  evaluation_results_gpt3.5_new_eval_prompt.json  example_config.yaml  generation_phase.py  krippendorff_comparison_final.py  krippendorff_individual_annotations.py  llm_outputs.json  mermaid_file.mermaid  myopia_pipeline.ipynb  output.txt  pipeline.py  preliminary_prompt_generate.py  pyproject.toml  requirements.txt  scores.csv  serve.py  test  test_new_eval.py
cases/: encourage_learning_entropy.txt
configs/: example_config.yaml  working_config.yaml
datasets/: adding_entropy.txt
human_expert_prompts/: acknowledge_limitations.csv  ask_clarifying_questions.csv  attempt_manipulation.csv  avoid_value_manipulation.csv  correct_misinformation.csv  defer_important_decisions.csv  encourage_learning.csv  follow_instructions.csv  maintain_social_boundaries.csv  precise_instruction_following.csv  take_information_gathering_options.csv
reference_prompts/: README.md  requesting_context.json
results_analysis/: aggregate_results.py  analyze_empty_responses.py  prompt_parser.py  visualize_criteria.py
sensitivity_analysis/: analyse_rubric_sensitivity.py  create_baseline_dataset.py  generate_issue_consistency_report.py  inter_evaluator_agreement.py  jobs_config.yaml  krippendorf.py  rubric_sensitivity.ipynb  rubric_sensitivity.py  run_multiple_pairs.py
src/: asks_follow_up_question_sensititivity.py  batch_utils.py  build_agg_results.py  cost_tracker.py  cost_tracking_integration.py  dataset_generation.py  diversity.py  evaluate_model.py  evaluate_model_existing.py  evaluate_prompt_quality.py  export_results.py  generate_fictional_worlds.ipynb  llms.py  plot_claude_evolution.py  prompts.py  prompts_alt.py  significance.py  single_pair_sensitivity.py  utils.py  valid_fictional_worlds.csv  visualization_functions.py
tests/: adding_entropy.txt  generate_dataset_test_cites_sources_50.txt  generate_datasets_test.py  (+1 more)
(+59 files in other folders)
