[tool.poetry]
name = "agency-evaluations"
version = "0.1.0"
description = "A repo for generating our evaluations and running benchmarks."
authors = ["bensturgeon <sturgeonkid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
minichain = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
